2009-03-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* checker.tcl (manpage): Added new markup command for document
	  references (manpage). For now formatted like a 'term'.

	* doctools.tcl: Fixed handling of include files. Search relative
	* doctools.man: to processed file, and run the command through
	  'subst' first, to resolve embedded commands (vset uses). Bumped
	  to version 1.4.2.

	* docidx.tcl: Fixed handling of include files. Search relative
	* docidx.man: to processed file, and run the command through
	  'subst' first, to resolve embedded commands (vset uses). Bumped
	  to version 1.0.2

	* doctoc.tcl: Fixed handling of include files. Search relative
	* doctoc.man: to processed file, and run the command through
	  'subst' first, to resolve embedded commands (vset uses). Bumped
	  to version 1.1.1.

	* docidx_lang_syntax.man: Added notes about command arguments.

2009-02-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* checker_toc.tcl: TOC language extended to allow empty tocs, empty
	* docidx.test: divisions, and the mixing of items and divisions at
	* doctoc.tcl: every level. Extended testsuite. Updated documentation.
	* doctoc.test: Bumped version to 1.1. Fixed bug in the documentation
	* doctoc_lang_cmdref.man: of markup command 'item' (arguments were
	* doctoc_lang_intro.man: missing).
	* doctoc_lang_syntax.man:
	* doctoc.man:
	* pkgIndex.tcl:

2009-02-10  Andreas Kupries  <andreask@activestate.com>

	* checker_idx.tcl (index_end): Allow empty index (no keys).
	* docidx.tcl: Bumped package to vrsion 1.0.1. Updated the
	* docidx.test: documentation, where not already in alignment.
	* docidx_lang_intro.man: Extended testsuite. Fixed small typo
	* docidx_lang_syntax.man: orthogonal to this change.
	* pkgIndex.tcl: Fixes [SF Tcllib Bug 2557107].

2009-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* docidx.tcl: Extended the plugin APIs for all formats with a new